Testing documentation (#11)
* documents and gives scripts to locally test api

* complete installation guide

* adds workflow to test api in a k8s cluster

* Github Action to test (#10)

* fixes cluster reference

* removes waiting for deployment

* switches routeapi port

* debugging

* debugging - adds more logs

* debugging - adding registry to kind cluster

* debug: using published image

* debug: waiting for app

* debug: checking nodes

* debug: checking nodes again

* debug: checking nodes again - giving some time

* checking status for pods instead of deployment

* waiting for port forward to be ready

* reduces logging

* Added documentation for swagger and makefile

* Switched swagger version to OpenAPI 3 compatibility

* Adds swaggo dependencies for v2

* back to swagger v2 since incompatibility
