# docs/swagger.yaml
@@ -1,84 +1,115 @@
-components: {}
-externalDocs:
-  description: ""
-  url: ""
+basePath: /api
+consumes:
+- application/json
+definitions:
+  internal_api.APIResponse:
+    properties:
+      data: {}
+      error: {}
+      message:
+        type: string
+      statusCode:
+        type: integer
+      success:
+        type: boolean
+    type: object
 info:
-  description: API to query HTTPRoutes and related Gateway API resources.
-  license:
-    name: MIT
-    url: https://opensource.org
-  title: RouteAPI
-  version: 0.0.1
-openapi: 3.1.0
+  contact: {}
+  description: Exposes API Gateway routes and deployments attached to them
+  title: routeapi
+  version: 0.0.2
 paths:
+  /health/:
+    get:
+      description: health status
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/internal_api.APIResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_api.APIResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_api.APIResponse'
+      summary: Health status
   /route/{namespace}/{routeName}:
     get:
-      description: Returns details for an API HttpRoute
+      consumes:
+      - application/json
+      description: Queries API Gateway HTTP Route object
       parameters:
-      - description: Namespace to search
+      - description: Namespace to search for params
         in: path
         name: namespace
         required: true
-        schema:
-          type: string
-      - description: HTTPRoute resource name being searched
+        type: string
+      - description: 'Label string to match selector: comma separated values of type
+          key=value'
         in: path
         name: routeName
-        required: true
-        schema:
-          type: string
-      - description: decides if it adds Deployment data related to the route
-        in: query
-        name: include_deployment
-        schema:
-          type: boolean
-      - description: Applies a label selector to k8s API query in format label_name=value,label_name2,value2
-        in: query
-        name: label_selectoor
-        schema:
-          type: string
+        type: string
+      produces:
+      - application/json
       responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                items:
-                  type: string
-                type: array
-          description: OK
-      summary: Gets HTTPRoute object
-      tags:
-      - HTTPRoute
-  /routes:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/internal_api.APIResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_api.APIResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_api.APIResponse'
+      summary: Retrieves details of a specific route
+  /routes/:
     get:
-      description: Returns a list of Gateway API HttpRoutes matching criteria
+      consumes:
+      - application/json
+      description: Queries API Gateway HTTP Route objects based on criteria
       parameters:
-      - description: Namespace to search (default)
+      - description: Namespace to search for params
         in: query
         name: namespace
-        schema:
-          type: string
-      - description: decides if it adds Deployment data related to the route
-        in: query
-        name: include_deployment
-        schema:
-          type: boolean
-      - description: Applies a label selector to k8s API query in format label_name=value,label_name2,value2
+        required: true
+        type: string
+      - description: 'Label string to match selector: comma separated values of type
+          key=value'
         in: query
         name: label_selector
-        schema:
-          type: string
+        type: string
+      - description: Flag to indicate if response should include deployment data for
+          each route
+        in: query
+        name: include_deployment
+        type: boolean
+      produces:
+      - application/json
       responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                items:
-                  type: string
-                type: array
-          description: OK
-      summary: List HTTPRoute objects
-      tags:
-      - HTTPRoute
-servers:
-- url: /api
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/internal_api.APIResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_api.APIResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_api.APIResponse'
+      summary: Retrieves a list of routes matching criteria
+produces:
+- application/json
+schemes:
+- http
+- https
+swagger: "2.0"
